# plenty-protocol

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
client/src/: App.js  CreateLoan.js  Long.js  Short.js  Trade.js  Wallet.js  index.html  index.js
programs/plenty/: Cargo.toml
programs/plenty/src/: account.rs  bonding_curve.rs  context.rs  interest.rs  lib.rs
tests/: create-loan.spec.ts  plenty.js
