[package]
name = "plenty"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "plenty"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
anchor-spl = "0.16.0"
rust_decimal = { version = "=1.15.0", features = ["maths"] }
